# caf-prototype

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  rst.json
caf/: __init__.py  annotations.py  schema.py
caf/agent/: __init__.py  diagnosis.py  local_agent.py  repair.py  signals.py
caf/eval/: __init__.py  ablation.py  rq1.py  rq1_llm.py  rq2.py  scenarios.py
caf/fabric/: __init__.py  belief.py  fusion.py  gossip.py  node.py
caf/reason/: __init__.py  openai_reasoner.py
caf/rst_compiler/: __init__.py  cli.py  compiler.py  extractor.py
caf/runtime/: __init__.py  agent_main.py  instrument.py  observer.py  telemetry.py
deploy/: Dockerfile  docker-compose.yml  faultmatrix.py  measure.py  smoke.py
deploy/stripe_stub/: main.py
testbed/subscription/auth/: service.py
testbed/subscription/payment/: service.py
testbed/subscription/subscription/: service.py
testbed/subscription/user_api/: service.py
tests/: test_ablation.py  test_agent_http.py  test_diagnosis.py  test_extractor.py  test_fusion.py  test_gossip.py  test_observer.py  test_openai_reasoner.py  test_repair.py  test_telemetry.py
