[project]
name = "caf-prototype"
version = "0.1.0"
description = "Reference prototype for the Cognitive Autonomic Framework (CAF): the RST compiler and a microservice testbed."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Tobi Adeosun", email = "me@tadeosun.com" }]
dependencies = ["pydantic>=2.6"]

[project.urls]
Source = "https://github.com/tflux2011/caf-prototype"
Paper = "https://zenodo.org/records/21363579"
"Paper source" = "https://github.com/tflux2011/caf"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Only needed to *run* the testbed services; extraction is purely static and
# needs none of these.
runtime = [
  "fastapi>=0.110",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "uvicorn>=0.29",
]
# Only needed for the real hosted-API reasoner (Phase D). The key is read from
# the OPENAI_API_KEY environment variable at runtime; no SDK is required.
reason = ["httpx>=0.27"]

[project.scripts]
caf-rst = "caf.rst_compiler.cli:main"
caf-eval = "caf.eval.rq1:main"
caf-eval-rq1-llm = "caf.eval.rq1_llm:main"
caf-eval-rq2 = "caf.eval.rq2:main"
caf-eval-ablation = "caf.eval.ablation:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["caf*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
